更新 KaiGeNet.java